WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/ChargeType__c.field-meta.xml
<CustomField>
    <fullName>ChargeType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Charge Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>