WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>