WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Effective_Price__c.field-meta.xml
<CustomField>
    <fullName>Effective_Price__c</fullName>
    <label>Effective Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>