WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <label>MRR</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>