WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/MRR_EU__c.field-meta.xml
<CustomField>
    <fullName>MRR_EU__c</fullName>
    <label>MRR EU</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>