WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <formula>ProductRatePlanCharge__r.zqu__ProductRatePlan__r.VendorProductOption__c</formula>
    <label>Option</label>
    <type>Text</type>
</CustomField>