WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Term</label>
    <length>3</length>
    <type>Text</type>
</CustomField>