WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <formula>ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__ZProduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Id</label>
    <type>Text</type>
</CustomField>