WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>