WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>