WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/ProductRatePlanCharge__c.field-meta.xml
<CustomField>
    <fullName>ProductRatePlanCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Rate Plan Charge</label>
    <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
    <relationshipLabel>Shipment Charge Groups</relationshipLabel>
    <relationshipName>Shipment_Charge_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>