WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>