WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>zqu__Quote__c</referenceTo>
    <relationshipLabel>Shipment Charge Groups</relationshipLabel>
    <relationshipName>Shipment_Charge_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>