WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Rate_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>