WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/RatePlanId__c.field-meta.xml
<CustomField>
    <fullName>RatePlanId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Plan Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>