WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Recurring_Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Monthly_Expense__c</fullName>
    <label>Recurring Monthly Expense</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>