WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/ServiceTerm__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerm__c</fullName>
    <label>Service Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>