WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Shipment Charge Groups</relationshipLabel>
    <relationshipName>Shipment_Charge_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>