WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Shipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Cost__c</fullName>
    <label>Shipment Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>