WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Shipping_Carrier_Id__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Carrier Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>