WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Shipping_Service__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>