WexGit/Wex_DX/force-app/main/default/objects/Shipment_Charge_Group__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>